--- a/ClientApp/src/app/nav-menu/nav-menu.component.html
+++ b/ClientApp/src/app/nav-menu/nav-menu.component.html
@@ -29,6 +29,12 @@
           <li class="nav-item" [routerLinkActive]="['link-active']">
             <a class="nav-link" style="color: #428bca;" [routerLink]="['/group-search']">Groups</a>
           </li>
+          <li class="nav-item" [routerLinkActive]="['link-active']">
+            <a class="nav-link" style="color: #428bca;" [routerLink]="['/custom-bulk-update']">Custom Bulk Update</a>
+          </li>
+          <li class="nav-item" [routerLinkActive]="['link-active']">
+            <a class="nav-link" style="color: #428bca;" [routerLink]="['/custom-bulk-template']">Custom File Creation</a>
+          </li>
         </ul>
       </div>
     </div>
